added inspiration from zoes yaml and cleaned up routes
